fix test item rating

--- a/templates/test_item_rating.html
+++ b/templates/test_item_rating.html
@@ -227,7 +227,7 @@
 									<span class="ms-4 category" id="content"></span>
 								</div>
 								<div class="col-2 d-flex align-items-center pb-3 border-bottom">							
-									<span class="ms-4 tcategory" id="content"></span>
+									<span class="ms-4 tcategory" id="content" style="width: 13%;padding-left: 0;"></span>
 								</div>
 								
 								<div class="col-3 border-bottom">     
