--- a/templates/view_project.html
+++ b/templates/view_project.html
@@ -94,6 +94,12 @@
                     </div>
                 </div>
             </div>
+			<div class="row pt-5 pb-5">
+                <span class="pb-4" id="pheadline">Test item to see rating</span>
+					<a href="/project/{{ project_information['id'] }}/item/{{ item_id }}" style="width:200px;">
+                <button class="ms-2" id="pbutton">Test Item Rating</button>
+				</a>
+            </div>
             <!-- first box -->
             <div class="container pt-4" style="margin-left: 10px;">
 				
@@ -219,12 +225,7 @@
                 </div>
             </div>-->
             <!-- third row -->
-            <div class="row pt-5 pb-5">
-                <span class="pb-4" id="pheadline">Test item to see rating</span>
-				<a href="/project/{{ project_information['id'] }}/item/{{ item_id }}">
-                <button class="ms-2" id="pbutton">Test Item Rating</button>
-				</a>
-            </div>
+
         </div>
     </div>
 </body>
