--- a/templates/store_owner_faqs.html
+++ b/templates/store_owner_faqs.html
@@ -64,7 +64,7 @@
                             <span>Manage Projects</span>
                         </a>
                         <a class="ps-4 p-3 pt-4" id="link_sb" href="/userprofile">
-                            <img class="icon_sb" src="images/profile_sidebar_active.png" />
+                            <img class="icon_sb" src="images/profile_sidebar.png" />
                             <span>View Profile</span>
                         </a>
                         <a class="ps-4 p-3 pt-4" id="link_sb" href="/problemreporting">
@@ -72,7 +72,7 @@
                             <span>Problem Reporting</span>
                         </a>
                         <a class="active ps-4 p-3 border-start border-3" id="link_sb" href="#">
-                            <img class="icon_sb" src="images/faq_sidebar.png" />
+                            <img class="icon_sb" src="images/faq_sidebar_active.png" />
                             <span>FAQ</span>
                         </a>
                         <a class="ps-4 p-3 pt-4" id="link_sb" href="/logout">
