--- a/templates/view_project.html
+++ b/templates/view_project.html
@@ -74,7 +74,7 @@
                     <span class="me-5" id="mnsubhead"><a style="text-decoration:none;color:black;" href="/userprofile">{{ fullname }}</a></span>
                 </div>
             </div>
-            <div class="row pt-4 pb-2">
+            <div class="row pt-4 pb-2 crawl-boxes">
                 <div class="col">
                     <div class="pbox-s-normal text-center">
                         <span class="pt-4" id="attributehead">Number of Sub Categories</span>
@@ -94,14 +94,14 @@
                     </div>
                 </div>
             </div>
-			<div class="row pt-5 pb-5">
+			<div class="row pt-5 pb-5 crawl-boxes">
                 <span class="pb-4" id="pheadline">Test item to see rating</span>
 					<a href="/project/{{ project_information['id'] }}/item/{{ item_id }}" style="width:200px;">
                 <button class="ms-2" id="pbutton">Test Item Rating</button>
 				</a>
             </div>
             <!-- first box -->
-            <div class="container pt-4" style="margin-left: 10px;">
+            <div class="container pt-4 crawl-boxes" style="margin-left: 10px;">
 				
 				<div id="mylist">
 					<div class="row pbox-l" style="height: unset;min-height: 200px;max-height: 467px;width:1462px;margin-left: -3px;">
