--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2052,3 +2052,16 @@ select:invalid, select option[value=""]{
 .items:hover {
 	background-color: rgba(55, 81, 255, 0.04);
 }
+
+@media screen and (min-width: 764px) and (max-width:1625px) {
+.sidebar{
+	width:105px!important;
+}
+.sbheadline{
+	width:105px!important;
+}
+.crawl-boxes{
+	margin-left: 200px!important;
+}
+
+	}
