profile not updating

--- a/templates/view_profile.html
+++ b/templates/view_profile.html
@@ -149,7 +149,7 @@
                         </div>
                         <div class="col-10 border-bottom">
                             <span class="pb-3" id="content">
-							<input name="cname" type="text" maxlength="50" required value='{{ store_owner_information["company"] }}' placeholder='{{ store_owner_information["company"] }}'></input></span>
+							{{ store_owner_information["company"] }}</span>
                         </div>
                     </div>
                     <!-- tenth row -->
