fix to test item rating

--- a/templates/view_project.html
+++ b/templates/view_project.html
@@ -160,7 +160,9 @@
 										<span class="pt-4 category" id="content"></span>
 									</div>
 									<div class="col-3">
-										<span class="pt-4 list" id="content"></span>
+									<div class="list" id="content" style="height: 360px;overflow-y: scroll;border: 1px solid #DFE0EB;
+    border-radius: 8px;padding-left:0;"></div>
+										
 									</div>
 									<div class="col-2">
 										<img class="statistics" style="height:360px;width:360px;">
